<resources>
    <string name="app_name">Calculator</string>
    <string name="equal">=</string>
    <string name="back">Back</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="one">1</string>
    <string name="three">3</string>
    <string name="sub">-</string>
    <string name="two">2</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="sum">+</string>
    <string name="four">4</string>
    <string name="seven">7</string>
    <string name="nine">9</string>
    <string name="product">*</string>
    <string name="division">/</string>
    <string name="close_bracket">)</string>
    <string name="open_bracket">(</string>
    <string name="clear">AC</string>
    <string name="eight">8</string>
</resources>